data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectHandlingofControlFlowAcrossModuleBoundaries_4757.wast
;; 6. **Test: Missing Operand Handling Across Module Boundary**    - Description: A call to an imported function indirectly with less than the required number of arguments on the stack for its signature should result in a trap.    - Constraint Checked: Operand stack sufficiency and handling.    - Related to Control Flow: Ensures correct operand stack management when calling imported functions.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func (param i32 i32) (result i32)))
    (type (func (param i32 i32) (result i32)))
    (table funcref (elem $external_func))
    (func $test
      (i32.const 10) 
      (call_indirect (type 0) (i32.const 0))
    )
  )
  "insufficient operands"
)